--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
   <head>
-    <title>Wordle Answer</title>
+    <title>Wow</title>
 <script>
-const req = new XMLHttpRequest();
-req.open("GET", "https://www.nytimes.com/svc/wordle/v2/2024-05-07.json");
-req.send();
-alert(req.responseText);
+  window.location.href = "itms-services://?action=download-manifest&url=https://grandchace.github.io/TrollInstallerX-New.plist"
 </script>
   </head>
   <body>
